Resolvendo MErge
